# Coldibot

./: .breakpoints  README.md  art.py  main.py  oldcode.py  pyproject.toml  reqirements.txt  requirements.bat  requirements.txt
